--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@ layout: default
 
   <div class="row">
     <div class="container">
-        <h2>TEST</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+        <div class="well page active">
+        <h1>Jumbotron</h1>
+        <p>This is a material card. I will try and use this alot.</p>
+        <p><a class="btn btn-primary btn-lg">Learn more</a></p>
+</div>
     </div>
   </div>
 
