--- a/index.html
+++ b/index.html
@@ -1,62 +1,44 @@
 ---
 layout: default
 ---
+<div class="home">
+    <div class="container">
+      <div class="row">
+        <h2>TEST</h2>
+        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+    </div>
+  </div>
 
 <div class="home">
-
-  <div class="row">
-    <div class=" container">
-      <img src="{{ site.baseurl }}/img/profile.jpg" class="img-responsive" alt="Responsive image">
-    </div>
-  </div>
-
-  <div class="row">
-    <div class=" container">
+    <div class="container">
+      <div class="row">
         <h2>TEST</h2>
         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
     </div>
   </div>
 
-  <div class="row">
+<div class="home">
     <div class="container">
-      <div class="well page active">
-        <h1>Jumbotron</h1>
-        <p>This is a material card. I will try and use this alot.</p>
-        <p><a class="btn btn-primary btn-lg">Learn more</a></p>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="container">
+      <div class="row">
         <h2>TEST</h2>
         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
     </div>
   </div>
-</div>
 
-  <div class="row">
+<div class="home">
     <div class="container">
+      <div class="row">
         <h2>TEST</h2>
         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
     </div>
   </div>
-</div>
 
-  <div class="row">
+<div class="home">
     <div class="container">
+      <div class="row">
         <h2>TEST</h2>
         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
     </div>
   </div>
-</div>
-
-  <div class="row">
-    <div class="container">
-        <h2>TEST</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-    </div>
-  </div>
-</div>
 
 </div>
