--- a/about/index.html
+++ b/about/index.html
@@ -2,5 +2,27 @@
 layout: default
 ---
 
-<div class="news">
+<div class="container top-padding .col-xs-6 .col-md-4">
+    <div class="row">
+      <div class="well page active">
+
+     	<h1>About This Site</h1>
+     	<p>I created this website in order to flex my web development and programming skills in general.</p>
+     	<h3>Design Language</h3>
+     	<p>I've never been formally trained on design. Truthfully as an engineer, I've always eschewed design in favor of functionality. However, with Googles new "Material Design" </p>
+
+
+
+
+
+
+     	<p>Credit for giving me access to the resources necessary to create this website are:</p>
+     	<ul>
+     		<li>
+     		<a href="http://fezvrasta.github.io/bootstrap-material-design/#material-colors">BootStrap Material</a>
+     		</li>
+     	</ul>
+
+      </div>
+    </div> 
 </div>
