--- a/about/index.html
+++ b/about/index.html
@@ -2,35 +2,28 @@
 layout: default
 ---
 
-<div class="container top-padding .col-xs-6 .col-md-4">
-    <div class="row">
-      <div class="well page active">
+<div class="container content-padding">
+    <div class="well page active">
 
-     	<h1>About This Site</h1>
-     	<p>I created this website in order to flex my web development and programming skills in general.</p>
-     	<h3>Design Language</h3>
-     	<p>I've never been formally trained on design. Truthfully as an engineer, I've always eschewed design in favor of functionality. However, I am a sucker for consistancy of design.</p>
+	 	<h1>About This Site</h1>
+	 	<p>I created this website in order to flex my web development and programming skills in general.</p>
+	 	<h3>Design Language</h3>
+	 	<p>I've never been formally trained on design. Truthfully as an engineer, I've always eschewed design in favor of functionality. However, I am a sucker for consistancy of design.</p>
 
-     	<p>Credit for giving me access to the resources necessary to create this website are:</p>
-     	<ul>
-     		<li>
-     		<a href="http://fezvrasta.github.io/bootstrap-material-design/#material-colors">BootStrap Material</a>
-     		</li>
-     	</ul>
+	 	<p>Credit for giving me access to the resources necessary to create this website are:</p>
+	 	<ul>
+	 		<li>
+	 		<a href="http://fezvrasta.github.io/bootstrap-material-design/#material-colors">BootStrap Material</a>
+	 		</li>
+	 	</ul>
 
-     	<h3>Future Plans</h3>
-     	<p>My end game goal here is to eventally move onto Ruby on Rails. While a static site is awesome at its simplicity, it would be nice to have the flexibility of a database driven dynamic website. Luckily, Jekyll should integrate fairly easily into a RoR website. I just need some time to learn.</p>
+	 	<h3>Future Plans</h3>
+	 	<p>My end game goal here is to eventally move onto Ruby on Rails. While a static site is awesome at its simplicity, it would be nice to have the flexibility of a database driven dynamic website. Luckily, Jekyll should integrate fairly easily into a RoR website. I just need some time to learn.</p>
 
-     	<h3>Why is your code so bad?</h3>
-     	<p>
-     		I prefer the term "Working Copy". But mostly its because I'm still screwing around with the HTML/CSS/JS spec and so there are tons of horrible hacks and stuff I've written that I was using to test out different aspects of the website. Hopefully, by the time anyone other than me reads this, I will have refactored my code properly.
-     	</p>
+	 	<h3>Why is your code so bad?</h3>
+	 	<p>
+	 		I prefer the term "Working Copy". But mostly its because I'm still screwing around with the HTML/CSS/JS spec and so there are tons of horrible hacks and stuff I've written that I was using to test out different aspects of the website. Hopefully, by the time anyone other than me reads this, I will have refactored my code properly.
+	 	</p>
 
-
-
-
-
-
-      </div>
     </div> 
 </div>
