--- a/index.html
+++ b/index.html
@@ -2,39 +2,34 @@
 layout: default
 ---
 <div class="home">
-    <div class="container">
-
-
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h1>About Me</h1>
-        </div>
-
-        <div class="panel-body">
-          <p>You are currently landing on the domain of Joseph Kim</p>
-        </div>
+  <div class="container content-padding">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h1>About Me</h1>
       </div>
 
-      <div class="panel panel-default">
-        <div class="panel-heading">
-           <h1>What Do I Do?</h1>
-        </div>
+      <div class="panel-body">
+        <p>You are currently landing on the domain of Joseph Kim</p>
+      </div>
+    </div>
 
-        <div class="panel-body">
-          <p>Temp</p>
-        </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+          <h1>What Do I Do?</h1>
       </div>
 
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h1>What Have I Done?</h1>
-        </div>
-
-        <div class="panel-body">
-          <p>Temp</p>
-        </div>
+      <div class="panel-body">
+        <p>Temp</p>
       </div>
+    </div>
 
-                 
-            
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h1>What Have I Done?</h1>
+      </div>
+      <div class="panel-body">
+        <p>Temp</p>
+      </div>
+    </div>               
+  </div>           
 </div>
