added some color

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="home">
   <div class="container content-padding">
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
       <div class="panel-heading">
         <h1>About Me</h1>
       </div>
@@ -13,7 +13,7 @@ layout: default
       </div>
     </div>
 
-    <div class="panel panel-default">
+    <div class="panel panel-success">
       <div class="panel-heading">
           <h1>What Do I Do?</h1>
       </div>
@@ -23,7 +23,7 @@ layout: default
       </div>
     </div>
 
-    <div class="panel panel-default">
+    <div class="panel panel-warning">
       <div class="panel-heading">
         <h1>What Cool Things Have I Done?</h1>
       </div>
