--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
       </div>
 
       <div class="panel-body">
-        <p>You are currently landing on the domain of Joseph Kim</p>
+        <p>You are currently landing on the personal website of Joseph Kim</p>
       </div>
     </div>
 
@@ -28,7 +28,7 @@ layout: default
         <h1>What Cool Things Have I Done?</h1>
       </div>
       <div class="panel-body">
-        <p>I wrote a piece of code for work that saved over $50,000 annually. </p>
+        <p>Almost killed myself by ignoring an infection </p>
       </div>
     </div>               
   </div>           
