--- a/about/index.html
+++ b/about/index.html
@@ -17,9 +17,11 @@ layout: default
 	 	<h1 class="panel-heading">Design Language</h1>
 	 	<div class="panel-body">I've never been formally trained on design. Truthfully as an engineer, I've always eschewed design in favor of functionality. However, I am a sucker for consistancy of design.
 
-
-
 	 	But even then, saying that, this website is a bit of a sandbox for me, which is why there are sometimes vastly different designs on pages. It's all in good fun.
+
+	 	The design of this site is based off Google's Material Design Language, the design that Google is using as their default starting from Android 5.0 Lollipop and with their Google Apps suite. 
+
+	 	My opinions on this design schema are mixed. While I am a fan of how it is designed to make information readiliy available.
 
 	 	</div>
 
@@ -29,14 +31,18 @@ layout: default
 <div class="panel panel-success">
     <div class="panel-heading">
 
-	 	<h1 class="panel-heading">Credit for giving me access to the resources necessary to create this website are:</h1>
-	 	<div class="panel-body">	 	
+	 	<h1 class="panel-heading">Resources used to Create this page</h1>
+	 	<div class="panel-body">
+
+	 		I have learned very quickly that I am not quite a big fan of markdown.	 	
 		 	<ul>
 		 		<li>
+		 		<a href="http://fezvrasta.github.io/bootstrap-material-design/#material-colors">Google Material Design Home Page</a>
+		 		<a href="http://fezvrasta.github.io/bootstrap-material-design/#material-colors">Google Polymer</a>
 		 		<a href="http://fezvrasta.github.io/bootstrap-material-design/#material-colors">BootStrap Material</a>
 		 		</li>
 		 	</ul>
-		 	</div>
+		</div>
 	</div> 	
 </div>
 
@@ -45,6 +51,11 @@ layout: default
 	 	<h1 class="panel-heading">Future Plans</h1>
 	 	<div class="panel-body">	 	
 	 		My end game goal here is to eventally move onto Ruby on Rails. While a static site is awesome at its simplicity, it would be nice to have the flexibility of a database driven dynamic website. Luckily, Jekyll should integrate fairly easily into a RoR website. I just need some time to learn.
+
+	 		I'm interested in the full stack of programming, and I don't mean a MEAN stack (I'm not a poet, don't judge me). I'm interested in the core of what programming has become
+	 		1. Android(Java/XML/A bit of C if you're inclined)
+	 		2. iOS (Objective C/Swift)
+	 		3. Responsive Design
 		</div>
 	</div> 	
 </div>
@@ -54,7 +65,9 @@ layout: default
 
 	 	<h1 class="panel-heading">Why is your code so bad?</h1>
 	 	<div class="panel-body">	 	
-I prefer the term "Working Copy". But mostly its because I'm still screwing around with the HTML/CSS/JS spec and so there are tons of horrible hacks and stuff I've written that I was using to test out different aspects of the website. Hopefully, by the time anyone other than me reads this, I will have refactored my code properly.
+			I prefer the term "Working Copy". But mostly its because I'm still screwing around with the HTML/CSS/JS spec and so there are tons of horrible hacks and stuff I've written that I was using to test out different aspects of the website. Hopefully, by the time anyone other than me reads this, I will have refactored my code properly.
+
+			I try my damn best to follow coding standards normally.
 		</div>
 	</div> 	
 </div>
