--- a/about/index.html
+++ b/about/index.html
@@ -4,36 +4,33 @@ layout: default
 
 <div class="panel panel-primary content-padding">
     <div class="panel-heading">
-
 	 	<h1 class="panel-heading">About This Site</h1>
-	 	<div class="panel-body">I created this website in order to flex my web development and programming skills in general.</div>
-
+	 	<div class="panel-body about-post">I created this website in order to flex my web development and programming skills in general.</div>
 	</div> 	
 </div>
 
 <div class="panel panel-warning">
     <div class="panel-heading">
-
 	 	<h1 class="panel-heading">Design Language</h1>
-	 	<div class="panel-body">I've never been formally trained on design. Truthfully as an engineer, I've always eschewed design in favor of functionality. However, I am a sucker for consistancy of design.
+	 	<div class="panel-body about-post">
+	 	I've never been formally trained on design. Truthfully as a classic engineer, I've always eschewed design in favor of functionality. However, I am a sucker for consistancy of design.
 
 	 	But even then, saying that, this website is a bit of a sandbox for me, which is why there are sometimes vastly different designs on pages. It's all in good fun.
 
 	 	The design of this site is based off Google's Material Design Language, the design that Google is using as their default starting from Android 5.0 Lollipop and with their Google Apps suite. 
 
-	 	My opinions on this design schema are mixed. While I am a fan of how it is designed to make information readiliy available.
+	 	My opinions on this design schema are mixed. While I'm' a fan of how it is designed to make information readiliy available through the use of bold colors and large typography, the "stock" Google design has a bit too much whitespace for my liking. Information density seems to greatly suffer as a result.
 
+	 	Also specifically in terms of mobile, the use of such bright colors as well as a white background as a base tends to drain battery quickly from phones using AMOLED screens, which many flagship Android phones use.
 	 	</div>
-
 	</div> 	
 </div>
 
 <div class="panel panel-success">
     <div class="panel-heading">
 
-	 	<h1 class="panel-heading">Resources used to Create this page</h1>
-	 	<div class="panel-body">
-
+	 	<h1 class="panel-heading">Resources Used To Create This Page</h1>
+	 	<div class="panel-body about-post">
 	 		I have learned very quickly that I am not quite a big fan of markdown.	 	
 		 	<ul>
 		 		<li>
@@ -49,7 +46,7 @@ layout: default
 <div class="panel panel-danger">
     <div class="panel-heading">
 	 	<h1 class="panel-heading">Future Plans</h1>
-	 	<div class="panel-body">	 	
+	 	<div class="panel-body about-post">	 	
 	 		My end game goal here is to eventally move onto Ruby on Rails. While a static site is awesome at its simplicity, it would be nice to have the flexibility of a database driven dynamic website. Luckily, Jekyll should integrate fairly easily into a RoR website. I just need some time to learn.
 
 	 		I'm interested in the full stack of programming, and I don't mean a MEAN stack (I'm not a poet, don't judge me). I'm interested in the core of what programming has become
@@ -62,9 +59,8 @@ layout: default
 
 <div class="panel panel-info">
     <div class="panel-heading">
-
-	 	<h1 class="panel-heading">Why is your code so bad?</h1>
-	 	<div class="panel-body">	 	
+	 	<h1 class="panel-heading">Why Is My Code So Bad?</h1>
+	 	<div class="panel-body about-post">	 	
 			I prefer the term "Working Copy". But mostly its because I'm still screwing around with the HTML/CSS/JS spec and so there are tons of horrible hacks and stuff I've written that I was using to test out different aspects of the website. Hopefully, by the time anyone other than me reads this, I will have refactored my code properly.
 
 			I try my damn best to follow coding standards normally.
