--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,13 @@ layout: default
 <div class="panel panel-primary content-padding">
     <div class="panel-heading">
 	 	<h1 class="panel-heading">About This Site</h1>
-	 	<div class="panel-body about-post">I created this website in order to flex my web development and programming skills in general.</div>
+	 	<div class="panel-body about-post">
+	 	<p>I created this website in order to flex my web development and programming skills. Initially I tried out creating this site using Ruby on Rails but I realized that I was being too ambitious to go straight into a dynamic website. Most of what I wanted to do could be done perfectly fine on a static website, and I wouldn't need to try and figure out how to jury-rig a fully static site into your normal MVC run website.
+		</p>
+
+		<p> Instead I decided to use Jekyll, a Ruby gem that uses a combination of Ruby, Markdown, YAML, and Liquid Templating Engine, to facilitate the create of a static website.
+		</p>
+	 	</div>
 	</div> 	
 </div>
 
@@ -13,16 +19,15 @@ layout: default
     <div class="panel-heading">
 	 	<h1 class="panel-heading">Design Language</h1>
 	 	<div class="panel-body about-post">
-	 	I've never been formally trained on design. Truthfully as a classic engineer, I've always eschewed design in favor of functionality. However, I am a sucker for consistancy of design.
-
-	 	But even then, saying that, this website is a bit of a sandbox for me, which is why there are sometimes vastly different designs on pages. It's all in good fun.
-
-	 	The design of this site is based off Google's Material Design Language, the design that Google is using as their default starting from Android 5.0 Lollipop and with their Google Apps suite. 
-
-	 	My opinions on this design schema are mixed. While I'm' a fan of how it is designed to make information readiliy available through the use of bold colors and large typography, the "stock" Google design has a bit too much whitespace for my liking. Information density seems to greatly suffer as a result.
-
-	 	Also specifically in terms of mobile, the use of such bright colors as well as a white background as a base tends to drain battery quickly from phones using AMOLED screens, which many flagship Android phones use.
+	 	<p>I've never been formally trained on design. Truthfully as a classic engineer, I've always eschewed design in favor of functionality. However, I am a sucker for consistancy of design. But even then, saying that, this website is a bit of a sandbox for me, which is why there are sometimes vastly different designs on pages. It's all in good fun.</p>
+	 	<p>
+	 	The design of this site is based off Google's Material Design Language, the design that Google is using as their default starting from Android 5.0 Lollipop and with their Google Apps suite. </p>
+	 	<p>
+	 	My opinions on this design schema are mixed. While I'm' a fan of how it is designed to make information readiliy available through the use of bold colors and large typography, the "stock" Google design has a bit too much whitespace for my liking. Information density seems to greatly suffer as a result.</p>
+	 	<p>
+	 	Also specifically in terms of mobile, the use of such bright colors as well as a white background as a base tends to drain battery quickly from phones using AMOLED screens, which many flagship Android phones use.</p>
 	 	</div>
+
 	</div> 	
 </div>
 
@@ -31,7 +36,7 @@ layout: default
 
 	 	<h1 class="panel-heading">Resources Used To Create This Page</h1>
 	 	<div class="panel-body about-post">
-	 		I have learned very quickly that I am not quite a big fan of markdown.	 	
+	 		<p>	 	
 		 	<ul>
 		 		<li>
 		 		<a href="http://fezvrasta.github.io/bootstrap-material-design/#material-colors">Google Material Design Home Page</a>
@@ -39,6 +44,7 @@ layout: default
 		 		<a href="http://fezvrasta.github.io/bootstrap-material-design/#material-colors">BootStrap Material</a>
 		 		</li>
 		 	</ul>
+		 	</p>
 		</div>
 	</div> 	
 </div>
@@ -47,12 +53,19 @@ layout: default
     <div class="panel-heading">
 	 	<h1 class="panel-heading">Future Plans</h1>
 	 	<div class="panel-body about-post">	 	
+	 	<p>	 
 	 		My end game goal here is to eventally move onto Ruby on Rails. While a static site is awesome at its simplicity, it would be nice to have the flexibility of a database driven dynamic website. Luckily, Jekyll should integrate fairly easily into a RoR website. I just need some time to learn.
 
-	 		I'm interested in the full stack of programming, and I don't mean a MEAN stack (I'm not a poet, don't judge me). I'm interested in the core of what programming has become
-	 		1. Android(Java/XML/A bit of C if you're inclined)
-	 		2. iOS (Objective C/Swift)
-	 		3. Responsive Design
+	 		I'm interested in the full stack of programming, and I don't mean a MEAN stack (I'm not a poet, don't judge me). I'm interested in the modern "core" of programming has become
+	 		<ul>
+		 		<li>Android(Java/XML/A bit of C if you're inclined)</li>
+		 		<li>iOS (Objective C/Swift)</li>
+		 		<li>Full Stack Design (HTML/CSS/JS/JQ/Angular-Node/Ruby on Rails)</li>
+		 		<li>Responsive Design</li>
+				<li>Autonomous Control (Think Drone programming or Self Driving Cars)</li>
+
+	 		</ul>
+	 	</p>
 		</div>
 	</div> 	
 </div>
@@ -60,10 +73,12 @@ layout: default
 <div class="panel panel-info">
     <div class="panel-heading">
 	 	<h1 class="panel-heading">Why Is My Code So Bad?</h1>
-	 	<div class="panel-body about-post">	 	
+	 	<div class="panel-body about-post">
+	 	<p>	 	
 			I prefer the term "Working Copy". But mostly its because I'm still screwing around with the HTML/CSS/JS spec and so there are tons of horrible hacks and stuff I've written that I was using to test out different aspects of the website. Hopefully, by the time anyone other than me reads this, I will have refactored my code properly.
 
 			I try my damn best to follow coding standards normally.
+		</p>
 		</div>
 	</div> 	
 </div>
