--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
   <div class="container content-padding">
     <div class="panel panel-primary">
       <div class="panel-heading">
-        <h1>About Me</h1>
+        <h1>Who am I?</h1>
       </div>
 
       <div class="panel-body">
