--- a/index.html
+++ b/index.html
@@ -1,44 +1,39 @@
 ---
 layout: default
 ---
-<div class="home">
-  <div class="container content-padding">
-    <div class="panel panel-primary">
-      <div class="panel-heading">
-        <h1>Who am I?</h1>
-      </div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-2"></div>
+    <div class="home col-md-8 content-padding" >
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h1>About Me</h1>
+          </div>
 
-      <div class="panel-body">
-        <p>You are currently landing on the personal website of Joseph Kim</p>
-      </div>
+          <div class="panel-body">
+            <p>You are currently landing on the personal website of Joseph Kim</p>
+          </div>
+        </div>
+
+        <div class="panel panel-success">
+          <div class="panel-heading">
+              <h1>What Do I Do?</h1>
+          </div>
+
+          <div class="panel-body">
+            <p>I work as a Control Systems Engineer</p>
+          </div>
+        </div>
+
+        <div class="panel panel-warning">
+          <div class="panel-heading">
+            <h1>What Cool Things Have I Done?</h1>
+          </div>
+          <div class="panel-body">
+            <p>Almost killed myself by ignoring an infection </p>
+          </div>
+        </div>           
     </div>
-
-    <div class="panel panel-success">
-      <div class="panel-heading">
-          <h1>What Do I Do?</h1>
-      </div>
-
-      <div class="panel-body">
-        <p>I work as a Control Systems Engineer</p>
-      </div>
-    </div>
-
-    <div class="panel panel-warning">
-      <div class="panel-heading">
-        <h1>What Cool Things Have I Done?</h1>
-      </div>
-      <div class="panel-body">
-        <p>Almost killed myself by ignoring an infection </p>
-      </div>
-    </div>    
-
-     <div class="panel panel-warning">
-      <div class="panel-heading">
-        <h1>Other Stuff</h1>
-      </div>
-      <div class="panel-body">
-        <p>Stuff </p>
-      </div>
-    </div>           
-  </div>           
+    <div class="col-md-2"></div>
+  </div>
 </div>
