--- a/index.html
+++ b/index.html
@@ -2,38 +2,53 @@
 layout: default
 ---
 <div class="container">
-  <div class="row">
-    <div class="col-md-2"></div>
-    <div class="home col-md-8 content-padding" >
-        <div class="panel panel-primary">
-          <div class="panel-heading">
-            <h1>About Me</h1>
-          </div>
+<div class="row">
+  <div class="col-md-2"></div>
 
+    <div class="home col-md-7 content-padding">
+      <div class="panel panel-primary">
+        <div class="panel-heading"><h1>Welcome To My Page</h1></div>
           <div class="panel-body">
-            <p>You are currently landing on the personal website of Joseph Kim</p>
+            <p>Hi. My name is Joseph Kim.</p>
+            <p>I am an Aeronautical Engineer</p>
+            <p>I help design metal tubes that fly</p>
           </div>
-        </div>
+      </div>
 
-        <div class="panel panel-success">
-          <div class="panel-heading">
-              <h1>What Do I Do?</h1>
-          </div>
-
+      <div class="panel panel-success">
+        <div class="panel-heading"><h1>What Do I Do?</h1></div>
           <div class="panel-body">
-            <p>I work as a Control Systems Engineer</p>
-          </div>
-        </div>
+              <p>I work as a Control Systems Engineer
 
-        <div class="panel panel-warning">
-          <div class="panel-heading">
-            <h1>What Cool Things Have I Done?</h1>
+
+              </p>
           </div>
+      </div>
+
+      <div class="panel panel-warning">
+        <div class="panel-heading"><h1>What Cool Things Have I Done?</h1></div>
           <div class="panel-body">
             <p>Almost killed myself by ignoring an infection </p>
           </div>
-        </div>           
+      </div>           
     </div>
-    <div class="col-md-2"></div>
+
+  <div class="col-md-3 content-padding">
+      <div class="panel panel-default">
+        <div class="panel-body">
+            <h3>Contact Me</h3>
+              <ul class="social-icons">
+                <li id="s-icon"><a href="mailto:{{ site.email }}"><img src="../img/social_media/With Border/email-variation.png"></li>
+                <li id="s-icon"><a href="https://www.linkedin.com/in/joekim29"><img src="../img/social_media/With Border/linkedin-variation.png"></li>
+                <li id="s-icon"><a href="https://github.com/nikolaevarius/"><img src="../img/social_media/With Border/github.png"></li>
+              </ul >
+        </div>
+      </div>
+
   </div>
+
+ 
+</div>
+
+
 </div>
