lots of changes

--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<!-- About page -->
 <div class="panel panel-primary content-padding">
     <div class="panel-heading">
 	 	<h1 class="panel-heading">About This Site</h1>
@@ -17,7 +17,7 @@ layout: default
 
 <div class="panel panel-warning">
     <div class="panel-heading">
-	 	<h1 class="panel-heading">Design Language</h1>
+	 	<h1 class="panel-heading roboto-black">Design Language</h1>
 	 	<div class="panel-body about-post">
 	 	<p>I've never been formally trained on design. Truthfully as a classic engineer, I've always eschewed design in favor of functionality. However, I am a sucker for consistancy of design. But even then, saying that, this website is a bit of a sandbox for me, which is why there are sometimes vastly different designs on pages. It's all in good fun.</p>
 	 	<p>
@@ -31,18 +31,18 @@ layout: default
 	</div> 	
 </div>
 
-<div class="panel panel-success">
+<div class="panel">
     <div class="panel-heading">
 
 	 	<h1 class="panel-heading">Resources Used To Create This Page</h1>
 	 	<div class="panel-body about-post">
 	 		<p>	 	
 		 	<ul>
-		 		<li>
-		 		<a href="http://fezvrasta.github.io/bootstrap-material-design/#material-colors">Google Material Design Home Page</a>
-		 		<a href="http://fezvrasta.github.io/bootstrap-material-design/#material-colors">Google Polymer</a>
-		 		<a href="http://fezvrasta.github.io/bootstrap-material-design/#material-colors">BootStrap Material</a>
-		 		</li>
+		 		
+		 		<li><a href="http://fezvrasta.github.io/bootstrap-material-design/#material-colors">Google Material Design Home Page</a></li>
+		 		<li><a href="http://fezvrasta.github.io/bootstrap-material-design/#material-colors">Google Polymer</a></li>
+		 		<li><a href="http://fezvrasta.github.io/bootstrap-material-design/#material-colors">BootStrap Material</a></li>
+		 		
 		 	</ul>
 		 	</p>
 		</div>
