--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@ layout: default
 <div class="row">
   <div class="col-md-2"></div>
 
-    <div class="home col-md-7 content-padding">
+    <div class="home col-md-8 content-padding">
       <div class="panel panel-primary">
         <div class="panel-heading"><h1>Welcome To My Page</h1></div>
           <div class="panel-body">
             <p>Hi. My name is Joseph Kim.</p>
-            <p>I am an Aeronautical Engineer</p>
-            <p>I help design metal tubes that fly</p>
+            <p>I am an Aeronautical Engineer.</p>
+            <p>I help design metal tubes that fly.</p>
           </div>
       </div>
 
       <div class="panel panel-success">
         <div class="panel-heading"><h1>What Do I Do?</h1></div>
           <div class="panel-body">
-              <p>I work as a Control Systems Engineer
+              <p>
+              I work as a Control Systems Engineer
 
 
               </p>
@@ -28,15 +29,17 @@ layout: default
       <div class="panel panel-warning">
         <div class="panel-heading"><h1>What Cool Things Have I Done?</h1></div>
           <div class="panel-body">
-            <p>Almost killed myself by ignoring an infection </p>
+            <p>
+            Created scripts that massively improved productivity.
+            </p>
           </div>
       </div>           
     </div>
-
-  <div class="col-md-3 content-padding">
+<!-- Social Media Buttons -->
+  <div class="col-md-2 content-padding">
       <div class="panel panel-default">
         <div class="panel-body">
-            <h3>Contact Me</h3>
+            <h3 id="contacts">Contact Me</h3>
               <ul class="social-icons">
                 <li id="s-icon"><a href="mailto:{{ site.email }}"><img src="../img/social_media/With Border/email-variation.png"></li>
                 <li id="s-icon"><a href="https://www.linkedin.com/in/joekim29"><img src="../img/social_media/With Border/linkedin-variation.png"></li>
@@ -49,6 +52,4 @@ layout: default
 
  
 </div>
-
-
 </div>
