--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <div class="container">
 <div class="row">
   <div class="col-md-2"></div>
-
+<!-- Main Content -->
     <div class="home col-md-8 content-padding">
       <div class="panel panel-primary">
         <div class="panel-heading"><h1>Welcome To My Page</h1></div>
