--- a/about/index.html
+++ b/about/index.html
@@ -63,8 +63,9 @@ layout: default
 		 		<li>Full Stack Design (HTML/CSS/JS/JQ/Angular-Node/Ruby on Rails)</li>
 		 		<li>Responsive Design</li>
 				<li>Autonomous Control (Think Drone programming or Self Driving Cars)</li>
-
 	 		</ul>
+
+	 		I plan to expand to Android development on my own free time. I've previously dabbled in it, but seriously, Activities/Fragments and the framework in general make my head spin. It doesn't help that Google tends to have very lax standards over how Activities/Views/Fragments interact. For example, Google Play Newsstand, the back button is technically supposed to be used to go back a fragment, while the "up" button is supposed to take you back an activity layer. However, the back button in Google Play Newsstand apparently for some reason takes you back an activity layer. What. 
 	 	</p>
 		</div>
 	</div> 	
@@ -77,7 +78,7 @@ layout: default
 	 	<p>	 	
 			I prefer the term "Working Copy". But mostly its because I'm still screwing around with the HTML/CSS/JS spec and so there are tons of horrible hacks and stuff I've written that I was using to test out different aspects of the website. Hopefully, by the time anyone other than me reads this, I will have refactored my code properly.
 
-			I try my damn best to follow coding standards normally.
+			I try my damn best to follow coding standards normally. I fully expect things to break, I'm still getting a hang of the desktop -> tablet -> mobile view shifting.
 		</p>
 		</div>
 	</div> 	
