--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ layout: default
   </div>    
 <!-- Social Media Buttons -->
       <div class="col-md-2 content-padding">
-          <div class="panel panel-default">
+          <div class="panel panel-default " id="panel-4">
             <div class="panel-body">
               <h3 id="contacts">Contact Me</h3>
               <ul class="social-icons">
@@ -47,4 +47,5 @@ layout: default
             </div>
           </div>
       </div>
+    </div>
 </div>
