added containers to about page

--- a/about/index.html
+++ b/about/index.html
@@ -4,6 +4,7 @@ layout: default
 <!-- About page -->
 <div class="panel panel-primary content-padding">
     <div class="panel-heading">
+        <div class="container">
 	 	<h1 class="panel-heading">About This Site</h1>
 	 	<div class="panel-body about-post">
 	 	<p>I created this website in order to flex my web development and programming skills. Initially I tried out creating this site using Ruby on Rails but I realized that I was being too ambitious to go straight into a dynamic website. Most of what I wanted to do could be done perfectly fine on a static website, and I wouldn't need to try and figure out how to jury-rig a fully static site into your normal MVC run website.
@@ -12,11 +13,13 @@ layout: default
 		<p> Instead I decided to use Jekyll, a Ruby gem that uses a combination of Ruby, Markdown, YAML, and Liquid Templating Engine, to facilitate the create of a static website.
 		</p>
 	 	</div>
+	</div>
 	</div> 	
 </div>
 
 <div class="panel panel-warning">
     <div class="panel-heading">
+    <div class="container">
 	 	<h1 class="panel-heading roboto-black">Design Language</h1>
 	 	<div class="panel-body about-post">
 	 	<p>I've never been formally trained on design. Truthfully as a classic engineer, I've always eschewed design in favor of functionality. However, I am a sucker for consistancy of design. But even then, saying that, this website is a bit of a sandbox for me, which is why there are sometimes vastly different designs on pages. It's all in good fun.</p>
@@ -27,30 +30,30 @@ layout: default
 	 	<p>
 	 	Also specifically in terms of mobile, the use of such bright colors as well as a white background as a base tends to drain battery quickly from phones using AMOLED screens, which many flagship Android phones use.</p>
 	 	</div>
-
+	 </div>
 	</div> 	
 </div>
 
 <div class="panel">
     <div class="panel-heading">
-
+ 	<div class="container">
 	 	<h1 class="panel-heading">Resources Used To Create This Page</h1>
 	 	<div class="panel-body about-post">
 	 		<p>	 	
 		 	<ul>
-		 		
 		 		<li><a href="http://fezvrasta.github.io/bootstrap-material-design/#material-colors">Google Material Design Home Page</a></li>
 		 		<li><a href="http://fezvrasta.github.io/bootstrap-material-design/#material-colors">Google Polymer</a></li>
-		 		<li><a href="http://fezvrasta.github.io/bootstrap-material-design/#material-colors">BootStrap Material</a></li>
-		 		
+		 		<li><a href="http://fezvrasta.github.io/bootstrap-material-design/#material-colors">BootStrap Material</a></li>	
 		 	</ul>
 		 	</p>
 		</div>
+	</div>
 	</div> 	
 </div>
 
 <div class="panel panel-danger">
     <div class="panel-heading">
+     	<div class="container">
 	 	<h1 class="panel-heading">Future Plans</h1>
 	 	<div class="panel-body about-post">	 	
 	 	<p>	 
@@ -68,11 +71,13 @@ layout: default
 	 		I plan to expand to Android development on my own free time. I've previously dabbled in it, but seriously, Activities/Fragments and the framework in general make my head spin. It doesn't help that Google tends to have very lax standards over how Activities/Views/Fragments interact. For example, Google Play Newsstand, the back button is technically supposed to be used to go back a fragment, while the "up" button is supposed to take you back an activity layer. However, the back button in Google Play Newsstand apparently for some reason takes you back an activity layer. What. 
 	 	</p>
 		</div>
+		</div>
 	</div> 	
 </div>
 
 <div class="panel panel-info">
     <div class="panel-heading">
+         	<div class="container">
 	 	<h1 class="panel-heading">Why Is My Code So Bad?</h1>
 	 	<div class="panel-body about-post">
 	 	<p>	 	
@@ -80,6 +85,7 @@ layout: default
 
 			I try my damn best to follow coding standards normally. I fully expect things to break, I'm still getting a hang of the desktop -> tablet -> mobile view shifting.
 		</p>
+		</div>
 		</div>
 	</div> 	
 </div>
