--- a/index.html
+++ b/index.html
@@ -3,29 +3,30 @@ layout: default
 ---
 <div class="container">
 <div class="row">
-  <div class="col-md-2"></div>
+  <div class="col-md-2"></div>   <!-- Column padding, not sure if necesary -->
 <!-- Main Content -->
-    <div class="home col-md-8 content-padding">
-      <div class="panel panel-primary" id="panel-1">
+<div class="home col-md-8 content-padding">  
+      <div class="panel panel-primary home-panel" id="panel-1">
         <div class="panel-heading"><h1>Welcome To My Page</h1></div>
           <div class="panel-body">
-            <p>Hi. My name is Joseph Kim.</p>
-            <p>I'm formally trained as an Aeronautical Engineer. This website was created by me in order to learn front end web development and to serve as a base so that I could try out different things in the world of programming. </p>
+            <p>Hi. My name is <strong>Joseph Kim.</strong></p>
+            <p>I'm formally trained as an Aeronautical Engineer, but really, I just like learning about everything. This website was created by me in order to learn front end web development and to serve as a base so that I could try out different things in the world of programming. I also try to post things from time to time with random thoughts. </p>
 
             <p>For more information, visit the "About" page on the navbar</p>
           </div>
       </div>
-
-      <div class="panel panel-success" id="panel-2">
-        <div class="panel-heading"><h1>What Do I Do?</h1></div>
-          <div class="panel-body">
-              <p>
-              I currently work as a Control Systems Engineer for UTC Pratt and Whitney. I manage the data that is used to create software that keeps aircraft engines running properly. You would be surprised as to what some of this software says, but of course, its all UTC proprietary so I can't say much online. But "Plane Engine on Fire" error are pretty funny.
-              </p>
-          </div>
+      <div class="row-background-blue">
+        <div class="panel panel-success home-panel" id="panel-2">
+          <div class="panel-heading"><h1>What Do I Do?</h1></div>
+            <div class="panel-body">
+                <p>
+                I currently work as a Control Systems Engineer for UTC Pratt and Whitney. I manage the data that is used to create software that keeps aircraft engines running properly. You would be surprised as to what some of this software says, but of course, its all UTC proprietary so I can't say much online. But "Plane Engine on Fire" error are pretty funny.
+                </p>
+            </div>
+        </div>
       </div>
 
-      <div class="panel panel-warning" id="panel-3">
+      <div class="panel panel-warning home-panel" id="panel-3">
         <div class="panel-heading"><h1>What Cool Things Have I Done?</h1></div>
           <div class="panel-body">
             <p>
@@ -36,7 +37,7 @@ layout: default
   </div>    
 <!-- Social Media Buttons -->
       <div class="col-md-2 content-padding">
-          <div class="panel panel-default " id="panel-4">
+          <div class="panel panel-default home-panel" id="panel-4">
             <div class="panel-body">
               <h3 id="contacts">Contact Me</h3>
               <ul class="social-icons">
@@ -47,5 +48,5 @@ layout: default
             </div>
           </div>
       </div>
-    </div>
+  </div>
 </div>
