added material buttons to about page

--- a/about/index.html
+++ b/about/index.html
@@ -41,13 +41,10 @@ layout: default
 	 			The front page uses a card based display system, that's more suited for mobile browsing.
 	 			This page uses a more web app based display system thats based off Googles Polymer website. 
 	 		</p>
-
-	 		<p>	 	
-		 	<ul>
-		 		<li><a href="http://fezvrasta.github.io/bootstrap-material-design/#material-colors">Google Material Design Home Page</a></li>
-		 		<li><a href="http://fezvrasta.github.io/bootstrap-material-design/#material-colors">Google Polymer</a></li>
-		 		<li><a href="http://fezvrasta.github.io/bootstrap-material-design/#material-colors">BootStrap Material</a></li>	
-		 	</ul>
+	 		<p>	
+		 		<a href="http://www.google.com/design/spec/material-design/introduction.html" class="btn btn-primary btn-raised">Google Material Design</a>
+				<a href="https://www.polymer-project.org/" class="btn btn-success btn-raised">Google Polymer</a>
+				<a href="https://github.com/FezVrasta/bootstrap-material-design" class="btn btn-info btn-raised">BootStrap Material</a> 	
 		 	</p>
 		</div>
 	</div> 	
