added resume page with interactivity framework

--- a/resume/index.html
+++ b/resume/index.html
@@ -1,11 +1,22 @@
 ---
 layout: default
 ---
+<div style="height: 828px;" class="container-fluid main">
+      <div class="row">
+        <nav style="height: 828px;" class="col-xs-3 menu">
+          <ul>
+            <li class="withripple" data-target="">Material Colors</li>
+            <li class="withripple" data-target="">Checkbox</li>
+            <li class="withripple" data-target="">Radio Button</li>
+            <li class="withripple" data-target="">Toggle Button</li>
+            <li class="withripple" data-target="">Input</li>
 
-<div class="resume">
-	<div class="row">
-    <div class=" container">
-        <h2>This page will eventually contain my resume</h2>
-    </div>
-  </div>
+        </nav>
+
+		<div class="pages col-xs-9">
+       	 <div class="well page active" id="about">
+          <h1 class="header">This will eventually have a interactive copy of my resume</h1>
+          <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+
+        </div>
 </div>
