--- a/about/index.html
+++ b/about/index.html
@@ -27,7 +27,7 @@ layout: default
 	 	<p>
 	 	My opinions on this design schema are mixed. While I'm' a fan of how it is designed to make information readiliy available through the use of bold colors and large typography, the "stock" Google design has a bit too much whitespace for my liking. Information density seems to greatly suffer as a result.</p>
 	 	<p>
-	 	Also specifically in terms of mobile, the use of such bright colors as well as a white background as a base tends to drain battery quickly from phones using AMOLED screens, which many flagship Android phones use. I'm going to stop ranting a bit here</p>
+	 	Also specifically in terms of mobile, the use of such bright colors as well as a white background as a base tends to drain battery quickly from phones using AMOLED screens, which many flagship Android phones use. I'm going to stop ranting a bit here, that's what the News page is for.</p>
 
 	 	</div>
 	 </div> 	
