--- a/resume/index.html
+++ b/resume/index.html
@@ -1,16 +1,14 @@
 ---
 layout: default
 ---
-<div style="height: 828px;" class="container-fluid main">
+<div style="height: 828px;" class="container-fluid main content-padding">
       <div class="row">
-        <nav style="height: 828px;" class="col-xs-3 menu">
+        <nav class="col-xs-3 menu">
           <ul>
-            <li class="withripple" data-target="">Material Colors</li>
-            <li class="withripple" data-target="">Checkbox</li>
-            <li class="withripple" data-target="">Radio Button</li>
-            <li class="withripple" data-target="">Toggle Button</li>
-            <li class="withripple" data-target="">Input</li>
-
+            <li class="withripple" data-target="">Profile</li>
+            <li class="withripple" data-target="">Experience</li>
+            <li class="withripple" data-target="">Education</li>
+            <li class="withripple" data-target="">Other</li>
         </nav>
 
 		<div class="pages col-xs-9">
