added material slide up animation

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
   <div class="col-md-2"></div>   <!-- Column padding, not sure if necesary -->
 <!-- Main Content -->
 <div class="home col-md-8 content-padding">  
-      <div class="panel panel-primary home-panel" id="panel-1">
+      <div class="panel panel-material-indigo home-panel" id="panel-1">
         <div class="panel-heading"><h1>Welcome To My Page</h1></div>
           <div class="panel-body">
             <p>Hi. My name is <strong>Joseph Kim.</strong></p>
@@ -15,18 +15,16 @@ layout: default
             <p>For more information, visit the "About" page on the navbar</p>
           </div>
       </div>
-      <div class="row-background-blue">
-        <div class="panel panel-success home-panel" id="panel-2">
+        <div class="panel panel-material-teal home-panel" id="panel-2">
           <div class="panel-heading"><h1>What Do I Do?</h1></div>
             <div class="panel-body">
                 <p>
                 I currently work as a Control Systems Engineer for UTC Pratt and Whitney. I manage the data that is used to create software that keeps aircraft engines running properly. You would be surprised as to what some of this software says, but of course, its all UTC proprietary so I can't say much online. But "Plane Engine on Fire" error are pretty funny.
                 </p>
             </div>
-        </div>
       </div>
 
-      <div class="panel panel-warning home-panel" id="panel-3">
+      <div class="panel panel-material-cyan home-panel" id="panel-3">
         <div class="panel-heading"><h1>What Cool Things Have I Done?</h1></div>
           <div class="panel-body">
             <p>
