--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <!-- About page -->
 <div class="row">
-    <div class="container">
+    <div class="container animate-about-panel ">
 	 	<h1 class="panel-heading">About This Site</h1>
 	 	<div class="panel-body">
 
@@ -17,7 +17,7 @@ layout: default
 </div> 	
 
 <div class="row row-background-blue">
-    <div class="container roboto-white">
+    <div class="container roboto-white animate-about-panel">
 	 	<h1 class="panel-heading">Design Language</h1>
 	 	<div class="panel-body">
 
@@ -34,7 +34,7 @@ layout: default
 </div>
 
 <div class="row">
- 	<div class="container">
+ 	<div class="container animate-about-panel">
 	 	<h1 class="panel-heading">Resources Used To Create This Page</h1>
 	 	<div class="panel-body">
 	 		<p>	
@@ -50,8 +50,8 @@ layout: default
 	</div> 	
 </div>
 
-<div class="row  row-background-blue">
-     	<div class="container roboto-white">
+<div class="row row-background-blue">
+     	<div class="container roboto-white animate-about-panel">
 	 	<h1 class="panel-heading">Future Plans</h1>
 	 	<div class="panel-body ">	
 	 	<p>	 
@@ -73,7 +73,7 @@ layout: default
 </div>
 
 <div class="row">
-         <div class="container">
+         <div class="container animate-about-panel">
 	 	<h1 class="panel-heading">Why Is My Code So Bad?</h1>
 	 	<div class="panel-body">
 	 	<p>	 	
