started work on interactive portion of resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -3,15 +3,16 @@ layout: default
 ---
 <div style="height: 828px;" class="container-fluid main content-padding">
       <div class="row">
-        <nav class="col-xs-3 menu">
-          <ul>
-            <li class="withripple" data-target="">Profile</li>
-            <li class="withripple" data-target="">Experience</li>
-            <li class="withripple" data-target="">Education</li>
-            <li class="withripple" data-target="">Other</li>
+        <nav class="col-xs-2 menu">
+              <ul class="nav nav-pills nav-stacked">
+                  <li class="active"><a href="javascript:void(0)">Home</a></li>
+                  <li><a href="javascript:void(0)">Profile</a></li>
+                  <li class="disabled"><a href="javascript:void(0)">Disabled</a></li>
+                  </li>
+              </ul>
         </nav>
 
-		<div class="pages col-xs-9">
+		<div class="pages col-xs-10">
        	 <div class="well page active" id="about">
           <h1 class="header">This will eventually have a interactive copy of my resume</h1>
           <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
