still working on resume animation

--- a/resume/index.html
+++ b/resume/index.html
@@ -7,7 +7,7 @@ layout: default
           <p>Placeholder</p>
         </div>
         <ul class="nav nav-pills nav-stacked resume-nav">
-            <li class="active"><a href="javascript:void(0)">Profile</a></li>
+            <li><a href="javascript:void(0)">Profile</a></li>
             <li><a href="javascript:void(0)">Professional Experiance</a></li>
             <li><a href="javascript:void(0)">Skills</a></li>
             <li><a href="javascript:void(0)">Projects</a></li>
@@ -15,23 +15,37 @@ layout: default
         </ul>
       </div>
 
-    <div class="col-md-offset-1 col-xs-9">
+    <div class="col-md-offset-1 col-xs-9 main-pages">
   		<div class="pages">
-       	<div class="well page active resume-card" id="about">
+       	<div class="well page resume-card active" id="Profile">
           <h1 class="header">This will eventually have a interactive copy of my resume</h1>
           <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
         </div>
        </div>
 
         <div class="pages">
-          <div class="well page active resume-card" id="about">
+          <div class="well page resume-card" id="Professional-Experiance">
           <h1 class="header">This will eventually have a interactive copy of my resume</h1>
           <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
           </div>
         </div>
 
         <div class="pages">
-          <div class="well page active resume-card" id="about">
+          <div class="well page resume-card" id="Skills">
+          <h1 class="header">This will eventually have a interactive copy of my resume</h1>
+          <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+          </div>
+        </div>
+
+        <div class="pages">
+          <div class="well page resume-card" id="Projects">
+          <h1 class="header">This will eventually have a interactive copy of my resume</h1>
+          <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+          </div>
+        </div>
+
+        <div class="pages">
+          <div class="well page resume-card" id="Other Experiance">
           <h1 class="header">This will eventually have a interactive copy of my resume</h1>
           <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
           </div>
