refactored some animations

--- a/about/index.html
+++ b/about/index.html
@@ -3,8 +3,8 @@ layout: default
 ---
 <!-- About page -->
 <div class="row">
-    <div class="container animate-about-panel ">
-	 	<h1 class="panel-heading">About This Site</h1>
+    <div class="container animate-about-panel-start">
+	 	<h1 class="panel-heading roboto-black">About This Site</h1>
 	 	<div class="panel-body">
 
 	 	<p>I created this website in order to flex my web development and programming skills. Initially I tried out creating this site using Ruby on Rails but I realized that I was being too ambitious to go straight into a dynamic website. Most of what I wanted to do could be done perfectly fine on a static website, and I wouldn't need to try and figure out how to jury-rig a fully static site into your normal MVC run website.
@@ -17,7 +17,7 @@ layout: default
 </div> 	
 
 <div class="row row-background-blue">
-    <div class="container roboto-white animate-about-panel">
+    <div class="container roboto-white animate-about-panel-start">
 	 	<h1 class="panel-heading">Design Language</h1>
 	 	<div class="panel-body">
 
@@ -34,8 +34,8 @@ layout: default
 </div>
 
 <div class="row">
- 	<div class="container animate-about-panel">
-	 	<h1 class="panel-heading">Resources Used To Create This Page</h1>
+ 	<div class="container animate-about-panel-start">
+	 	<h1 class="panel-heading roboto-black">Resources Used To Create This Page</h1>
 	 	<div class="panel-body">
 	 		<p>	
 	 			The front page uses a card based display system, that's more suited for mobile browsing.
@@ -51,7 +51,7 @@ layout: default
 </div>
 
 <div class="row row-background-blue">
-     	<div class="container roboto-white animate-about-panel">
+     	<div class="container roboto-white animate-about-panel-start">
 	 	<h1 class="panel-heading">Future Plans</h1>
 	 	<div class="panel-body ">	
 	 	<p>	 
@@ -73,8 +73,8 @@ layout: default
 </div>
 
 <div class="row">
-         <div class="container animate-about-panel">
-	 	<h1 class="panel-heading">Why Is My Code So Bad?</h1>
+         <div class="container animate-about-panel-start">
+	 	<h1 class="panel-heading roboto-black">Why Is My Code So Bad?</h1>
 	 	<div class="panel-body">
 	 	<p>	 	
 			I prefer the term "Working Copy". But mostly its because I'm still screwing around with the HTML/CSS/JS spec and so there are tons of horrible hacks and stuff I've written that I was using to test out different aspects of the website. Hopefully, by the time anyone other than me reads this, I will have refactored my code properly.
