--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
   <div class="col-md-2"></div>   <!-- Column padding, not sure if necesary -->
 <!-- Main Content -->
 <div class="home col-md-8 content-padding">  
-      <div class="panel panel-material-indigo animate-panel" id="panel-1">
+      <div class="panel panel-material-indigo animate-panel-start" id="panel-1">
         <div class="panel-heading"><h1>Welcome To My Page</h1></div>
           <div class="panel-body">
             <p>Hi. My name is <strong>Joseph Kim.</strong></p>
@@ -15,7 +15,7 @@ layout: default
             <p>For more information, visit the "About" page on the navbar</p>
           </div>
       </div>
-        <div class="panel panel-material-teal animate-panel" id="panel-2">
+        <div class="panel panel-material-teal animate-panel-start" id="panel-2">
           <div class="panel-heading"><h1>What Do I Do?</h1></div>
             <div class="panel-body">
                 <p>
@@ -24,7 +24,7 @@ layout: default
             </div>
       </div>
 
-      <div class="panel panel-material-cyan animate-panel" id="panel-3">
+      <div class="panel panel-material-cyan animate-panel-start" id="panel-3">
         <div class="panel-heading"><h1>What Cool Things Have I Done?</h1></div>
           <div class="panel-body">
             <p>
@@ -35,7 +35,7 @@ layout: default
   </div>    
 <!-- Social Media Buttons -->
       <div class="col-md-2 content-padding">
-          <div class="panel panel-default animate-panel" id="panel-4">
+          <div class="panel panel-default animate-panel-start" id="panel-4">
             <div class="panel-body">
               <h3 id="contacts">Contact Me</h3>
               <ul class="social-icons">
