--- a/resume/index.html
+++ b/resume/index.html
@@ -11,7 +11,7 @@ layout: default
             <li class="aside-btn"><a href="javascript:void(0)">Professional Experiance</a></li>
             <li class="aside-btn"><a href="javascript:void(0)">Skills</a></li>
             <li class="aside-btn"><a href="javascript:void(0)">Projects</a></li>
-            <li class="aside-btn"><a href="javascript:void(0)">Other Experiance</a></li>
+            <li class="aside-btn"><a href="javascript:void(0)">Other Experience</a></li>
         </ul>
       </div>
 
